test/char/src/main.cm
// examples/1.hello_world/main.cm

import "libc/stdio.hm"

const hello = "Hello"
const world = " World!"

const hello_world = hello + world


const UTF8_CHAR = "s"[0]
const UTF16_CHAR = "Я"[0]
const UTF32_CHAR = "🐀"[0]

func main() -> Int {
    var ch08: Char8
    var ch16: Char16
    var ch32: Char32

    ch08 = UTF8_CHAR

    //ch08 = "Я"[0]  // error
    ch16 = UTF16_CHAR

    //ch08 = "🐀"[0]  // error
    //ch16 = "🐀"[0]  // error
    ch32 = UTF32_CHAR

    //printf("ch08 = 0x%x (%c)\n", ch08 to Nat32, ch08)
    //printf("ch16 = 0x%x (%c)\n", ch16 to Nat32, ch16)
    //printf("ch32 = 0x%x (%c)\n", ch32 to Nat32, ch32)

    printf("%s\n", hello_world to *Str8)

    return 0
}

